--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
