--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_REACT_APP_API_URL=https://it-center-api.onrender.com
+VITE_REACT_APP_API_URL=https://it-center-api.onrender.com/students
 VITE_ADMIN_USERNAME = it-center
 VITE_ADMIN_PASS = 12345678
